调整首页信息

--- a/template/default/index/index_index.html
+++ b/template/default/index/index_index.html
@@ -211,7 +211,7 @@
                       <div style="height:10px;"></div>
                         <div class="tac">
                           <a href="{$list.url}" style="padding:10px;border:1px solid #ccc;width:80px;margin:0 auto">
-                              <img src="__PUBLIC__/img/sample/mm.png" alt="" style="vertical-align: text-top;"> <span  style="display:inline-block; padding-top:3px;padding-left:3px;color:#ffffff">查看更多</span>
+                              <img src="__PUBLIC__/img/sample/mm.png" alt="" style="vertical-align: text-top;"> <span  style="display:inline-block; padding-top:3px;padding-left:3px;">查看更多</span>
                           </a>
                         </div>
                       <div class="li2">
@@ -270,7 +270,7 @@
             <div class="fl index_news_type_tem tem2 acts">行业动态</div>
             <div class="cl"></div>
           </div>
-          <div class="fl" style="width:340px;margin-top:7px"><img src="__PUBLIC__/img/sample/xx.jpg" alt="" style="width:310px;">&nbsp;&nbsp;&nbsp;<img src="__PUBLIC__/img/sample/nm.png" alt=""></div>
+          <div class="fl" style="width:340px;margin-top:7px"><img src="__PUBLIC__/img/sample/xx.jpg" alt="" style="width:310px;"></div>
         </div>
 
         <div class="index_tem1 index_tem">
@@ -420,11 +420,11 @@
            </li>
            <li>
              <p class="p1 pl8 f20">亿霖旗舰店</p>
-             <p class="p2 f16">亿霖健康官方商城 | 点击进入</p>
+             <p class="p2 f16">亿霖健康官方商城 | <a target="_blank" href="http://shop106003497.taobao.com/" title="亿霖健康官方商城">点击进入</a></p>
            </li>
            <li>
              <p class="p1 pl8 f20">亿霖专营店</p>
-             <p class="p2 f16">亿霖官方淘宝店 | 点击进入</p>
+             <p class="p2 f16">亿霖官方淘宝店 |  <a target="_blank"  href="http://shop100304063.taobao.com/" title="亿霖官方淘宝店">点击进入</a> </p>
            </li>
 
          </ul>
