--- a/template/default/index/css/yunu.css
+++ b/template/default/index/css/yunu.css
@@ -2363,7 +2363,7 @@ body {
 .main_l p {
   width: 100%;
   height: 105px;
-  background: #036aac;
+  background: #ae3523;
   padding-top: 22px;
 }
 
@@ -2392,7 +2392,7 @@ body {
 }
 
 .main_l ul li:hover {
-  background: url(../img/li2.png) no-repeat 95% center #036aac;
+  background: url(../img/li2.png) no-repeat 95% center #ae3523;
 }
 
 .main_l ul li:hover span {
@@ -2417,7 +2417,7 @@ body {
   font-style: normal;
 }
 .main_l ul li.on {
-  background: url(../img/li2.png) no-repeat 95% center #036aac;
+  background: url(../img/li2.png) no-repeat 95% center #ae3523;
 }
 
 .main_l ul li.on span {
@@ -2427,7 +2427,7 @@ body {
 .main_l .contact {
   width: 100%;
   height: 203px;
-  background: #036aac;
+  background: #ae3523;
   padding-top: 40px;
 }
 
@@ -2559,7 +2559,7 @@ body {
  
 
 .pro_list ul li:hover span {
-  color: #036aac;
+  color: #ae3523;
 }
 
 .i_box2 {
@@ -2800,7 +2800,7 @@ body {
 .i_box4_content .new_list ul li .i_box4_time {
   width: 75px;
   padding: 14px 0;
-  background: #036aac;
+  background: #ae3523;
   position: absolute;
   left: 0;
   top: 0;
@@ -2957,7 +2957,7 @@ body {
 }
 
 .flink .flink_list ul li a:hover {
-  color: #036aac;
+  color: #ae3523;
 }
 
 .footer {
@@ -3386,7 +3386,7 @@ div.zoomMask {
 }
 
 .page_pic figure:hover span {
-  color: #036aac;
+  color: #ae3523;
 }
 
 .iet {
@@ -3619,12 +3619,12 @@ div.zoomMask {
   height: 49px;
   border: none;
   border-radius: 4px;
-  background: #0269ab;
+  background: #ae3523;
   color: #fff;
 }
 
 .show_guest .fr p .btn:hover {
-  background: #00aff1;
+  background: #9d3523;
 }
 
 .pro_tag {
@@ -3644,7 +3644,7 @@ div.zoomMask {
   padding-right: 15px;
 }
 .pro_tag a:hover {
-  color: #036aac;
+  color: #ae3523;
 }
 
 .pages .pagination {
