--- a/template/default/index/list_page.html
+++ b/template/default/index/list_page.html
@@ -14,6 +14,7 @@
     <meta name="description" content="<if condition="strlen($category['seo_desc']) neq 0">{$category.seo_desc|str2sub=160, true}<else/>{$category.desc|str2sub=160, true}</if>">
     <script type="text/javascript" src="__PUBLIC__/js/jquery-1.12.4.min.js"></script>
     <link rel="stylesheet" href="__PUBLIC__/css/yunu.css">
+    <link rel="stylesheet" href="__PUBLIC__/css/ylyy.css">
     <link rel="stylesheet" href="__PUBLIC__/css/swiper.min.css">
     <script type="text/javascript" src="__PUBLIC__/js/yunu.js"></script>
     <script type="text/javascript" src="__PUBLIC__/js/Superslide.js"></script>
@@ -65,6 +66,7 @@
             </div>
     	</div>
     </div>
+    <include file="public:links" />
 
     <include file="public:footer" />
 </body>
