调整手机页面布局

--- a/template/default/index/public_header.html
+++ b/template/default/index/public_header.html
@@ -27,7 +27,7 @@
             </div>
             <div class="head_nav">
                 <ul>
-                    <li><a href="<yunu:url name='home'/>">首页</a></li>
+                    <li><a href="<yunu:url name='home'/>">网站首页</a></li>
                     <?php
                     $chkid = isset($cid) ? $cid : 0;
                     $catid = isset($category) ? $category['pid'] : 0;
@@ -66,7 +66,7 @@
         </div>
         <div class="app_menu" id="app_menu">
             <ul>
-                <li><a href="<yunu:url name='home'/>"><span>首页</span></a></li>
+                <li><a href="<yunu:url name='home'/>"><span>网站首页</span></a></li>
                 <yunu:nav typeid='1'>
                     <li><a href="{$nav.url}"><span>{$nav.title}</span></a></li>
                     <div class="v_list">
