--- a/template/default/wap/index_index.html
+++ b/template/default/wap/index_index.html
@@ -17,8 +17,8 @@
   </title>
   <script type="text/javascript" src="__PUBLIC__/js/jquery-1.12.4.min.js"></script>
   <link rel="stylesheet" href="__PUBLIC__/css/yunu.css">
-  <link rel="stylesheet" href="__PUBLIC__/css/ylyy.css">
   <link rel="stylesheet" href="__PUBLIC__/css/swiper.min.css">
+  <link rel="stylesheet" href="__PUBLIC__/css/ylyy.css">
   <link rel="stylesheet" href="//at.alicdn.com/t/font_1859354_g9y7caq0nmu.css">
   <script type="text/javascript" src="__PUBLIC__/js/yunu.js"></script>
   <script type="text/javascript" src="__PUBLIC__/js/swiper.min.js"></script>
@@ -202,7 +202,7 @@
                   <li class="swiper-slide ">
                             <div class="pic">
                                 <div style="height:15px;"></div>
-                                <div class="title" style="font-size:0.8em">{$list.title}</div>
+                                <div class="ellipsis title" style="font-size:0.8em">{$list.title}</div>
                                 <div class="pics" style="width:70%;margin:0 auto;"><img src="{$list.pic}" alt="{$list.title}"></div>
                                 <div style="line-height:25px;font-size:0.7em">0.3克*30粒</div>
 
