--- a/template/default/wap/list_product.html
+++ b/template/default/wap/list_product.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="__PUBLIC__/css/yunu.css">
     <link rel="stylesheet" href="__PUBLIC__/css/swiper.min.css">
     <link rel="stylesheet" href="__PUBLIC__/css/ylyy.css">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_1343574_sefkror8a4s.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1859354_g9y7caq0nmu.css">
     <script type="text/javascript" src="__PUBLIC__/js/lodash.min.js"></script>
     <script type="text/javascript" src="__PUBLIC__/js/yunu.js"></script>
     <script type="text/javascript" src="__PUBLIC__/js/Superslide.js"></script>
@@ -49,7 +49,7 @@
                         <yunu:list cid="$cid" pagesize="8" orderby="sort asc">
                             <li class="mian_pr_tem fl">
                                 <div>
-                                    <div class="tc" style="font-size:16px;line-height:35px">{$list.title}</div>
+                                    <div class="tc ellipsis" style="font-size:0.132rem;line-height:35px;padding: 0 0.6em;">{$list.title}</div>
                                     <div class="tc"><img src="{$list.pic|default='__PUBLIC__/img/sample/600.png'}" alt="{$list.title}" style="width:90%;"></div>
                                     <div class="tc" style="font-size:1em;line-height:25px">{$list.specs}</div>
                                     <!-- <div class="tc" style="padding:0 8%;font-size:0.9em">简介:全面排痰，告别老慢支。</div> -->
@@ -63,7 +63,7 @@
                                     <div style="height:10px;"></div>
                                     <div class="mian_pr_tem1">
                                         <div style="visibility:hidden">
-                                            <div class="tc" style="font-size:16px;line-height:35px">{$list.title}</div>
+                                            <div class="tc" style="font-size:0.132rem;line-height:35px">{$list.title}</div>
                                             <div class="tc"><img src="{$list.pic|default='__PUBLIC__/img/sample/600.png'}" alt="" style="width:90%;"></div>
                                             <div class="tc" style="font-size:1em;line-height:25px">{$list.specs}</div>
                                             <!-- <div class="tc" style="padding:0 8%;font-size:0.9em">{$list.subtitle}</div> -->
