--- a/template/default/wap/public_header.html
+++ b/template/default/wap/public_header.html
@@ -28,7 +28,7 @@
         </div>
         <div class="app_menu" id="app_menu">
             <ul>
-                <li><a href="<yunu:url name='home'/>"><span>首页</span></a></li>
+                <li><a href="<yunu:url name='home'/>"><span>网站首页</span></a></li>
                 <yunu:nav typeid='1'>
                     <li><a href="{$nav.url}"><span>{$nav.title}</span></a></li>
                     <div class="v_list">
@@ -49,10 +49,11 @@
                     $("#app_menu").slideUp(600);
                 }
             });
-            $("#app_menu li").eq(1).addClass('on');
-            $("#app_menu li").eq(2).addClass('on');
-            $("#app_menu li").eq(3).addClass('on');
-            $("#app_menu li").eq(5).addClass('on');
+            var icon = '<i class="iconfont icon-xiangxiajiantou"></i> '
+            $("#app_menu li").eq(1).addClass('on').append(icon);
+            $("#app_menu li").eq(2).addClass('on').append(icon);
+            $("#app_menu li").eq(3).addClass('on').append(icon);
+            $("#app_menu li").eq(5).addClass('on').append(icon);
 
             $("#app_menu li").click(function(){
                 $(this).toggleClass("active").siblings('#app_menu li').removeClass("active");//切换图标
