--- a/template/default/wap/css/ylyy.css
+++ b/template/default/wap/css/ylyy.css
@@ -596,6 +596,76 @@ background-size:contain;
 }
 
 
+/* 招商加盟 */
+.page-partner .section{
+  padding: 2em 0 ;
+}
+.page-partner .policy-content p{
+  border-bottom: 1px solid #cccccc;
+  padding: 10px;
+  font-size: 16px;
+  line-height: 2.6em;
+  width: 750px;
+  margin: 0 auto;
+}
+.page-partner .policy-content p:first-child{
+  border-top: 1px solid #cccccc;
+
+}
+
+.page-partner .index_adv{
+  color: #fff;
+  background:url(../img/sample/partner-advbg.jpg);
+  background-position: center;
+  background-size: cover;
+}
+.page-partner .index_adv .index_title_bg_left{
+  background-image: url(../img/sample/news_left.png);
+}
+.page-partner .index_adv .index_title_bg_right{
+  background-image: url(../img/sample/news_right.png);
+}
+.page-partner .index_adv .index_title i{
+  color: #fff;
+}
+.page-partner .index_adv .adv{
+  color: #fff;
+  border-color:#fff;
+}
+
+.page-partner  .pro_list ul li{
+  width: 25%;
+  margin-left: 0;
+  margin-bottom: 20px;
+}
+.page-partner  .pro_list ul li a .imgauto img{
+    width: auto;
+    height: 203px;
+    margin: 0 auto;
+    display: block;
+}
+.page-partner  .partner-market li{
+  width: 33.333333%;
+  padding: 16px;
+  float:left;
+}
+.page-partner  .partner-market li:last-child{
+  float:right;
+}
+.page-partner  .partner-market li p{
+  font-size: 16px;
+  padding: 12px 0;
+}
+.page-partner  .partner-trademark{
+  background-color: #fff;
+}
+.page-partner  .partner-trademark ul li{
+  width: 20%;
+  float:left;
+  margin-left: 0;
+  margin-bottom: 20px;
+}
+
 .pages .pagination button {
   padding: 0 0.2em;
   width: 3.2em;
@@ -865,5 +935,72 @@ background-size:contain;
     height: auto;
   }
  
+   /* 招商加盟 */
 
+   .page-partner .container{
+     padding: 0;
+   }
+   .page-partner .policy{
+     padding: 2em 2%;
+   }
+   .page-partner .policy-content p{
+     width:auto;
+     font-size: 0.12rem;
+     padding: 0;
+   }
+   .page-partner .titlewrap   {
+    padding-bottom: 1em;
+   }
+   .page-partner .titlewrap   {
+     background-color: transparent;
+   }
+   .page-partner .pro_list{
+     padding-right: 1%;
+   }
+   .page-partner .pro_list ul li
+   {
+     width: 24%;
+     margin: 0 0 1em 1%;
+     padding: 0;
+   }
+   .pro_list ul li a .imgauto {
+    width: 100%;
+    height: 24vw;
+   }
+   .page-partner .pro_list ul li a .imgauto img{
+     width: 100%;
+   }
+   .pro_list ul li a span {
+     height: 2em;
+   }
+   .page-partner  .index_adv ul li {
+    float: left;
+    width: 20%;
+    }
+   .page-partner  .index_adv ul .adv {
+    position: relative;
+    width: 18vw;
+    height: 18vw;
+    color: #fff;
+    border: 1px solid #fff;
+    border-radius: 0;
+    margin: 0 auto;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .page-partner .partner-market li {
+    padding: 1%;
+  }
+  .page-partner .partner-market li p{
+    font-size: 0.12rem;
+  }
+  .page-partner .partner-trademark ul li{
+    margin: 0;
+  }
+  .page-partner .partner-trademark ul li img{
+    width: 100%;
+  }
 }
